--- a/PeneiraClubeProjeto/index.html
+++ b/PeneiraClubeProjeto/index.html
@@ -10,6 +10,7 @@
 <body>
     <header>
         <ul>
+            
             <li><img src="./img/Luke.png" id="logoHeader"></li>
 			<li><a href="principal.html"  target="principal">Home</a></li>
 			<li><a href="principal.html"  target="principal">Produtos</a></li>
@@ -31,6 +32,7 @@
     </section>
     <br>
     <footer>
+       <!--Teste -->
         Todos os direitos reservados ©
     </footer> 
 </body>
