Modificação no form de inscrição e no banco de dados

--- a/PeneiraClubeProjeto/index.html
+++ b/PeneiraClubeProjeto/index.html
@@ -5,35 +5,35 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <script type="text/javascript" src="js/script.js"></script>
-    <title>Luke Petshop</title>
+    <title>ADS Clube Futebol</title>
 </head>
 <body>
     <header>
+        <img src="./img/logo.png" id="logoHeader">
         <ul>
-            
-            <li><img src="./img/Luke.png" id="logoHeader"></li>
+            <!-- <li><img src="./img/Luke.png" id="logoHeader"></li> -->
 			<li><a href="principal.html"  target="principal">Home</a></li>
-			<li><a href="principal.html"  target="principal">Produtos</a></li>
-			<li><a href="promo.html" target="principal">Promoções</a></li>
-            <li><a href="http://camolesi.atwebpages.com" target="principal">Blog</a></li>
-			<li style="float:right;"><a href="form.html"  target="principal">Cadastre-se</a></li>
+			<li><a href="principal.html"  target="principal">Elenco</a></li>
+			<li><a href="promo.html" target="principal">Peneiras</a></li>
+            <li><a href="http://camolesi.atwebpages.com" target="principal">Sobre</a></li>
+			<li style="float:right;"><a href="form.html"  target="principal">Inscreva-se</a></li>
 		</ul>
     </header>
     <br>
     <!-- <nav>
         <br> <br>
     </nav> -->
+
+    <!-- <img src="img/fut2.jpg"> -->
+
     <section>
-        <article>
             <div class="texto">
                 <iframe name="principal" width="100%" height="450px" src="principal.html" frameborder="0"></iframe>       
             </div>
-        </article>
     </section>
     <br>
-    <footer>
-       <!--Teste     -->
+    <!-- <footer>
         Todos os direitos reservados ©
-    </footer> 
+    </footer>  -->
 </body>
 </html>
