--- a/PeneiraClubeProjeto/principal.html
+++ b/PeneiraClubeProjeto/principal.html
@@ -9,10 +9,9 @@
     <title>Home</title>
 </head>
 <body>
+  <img src="img/fut2.jpg">
    <!-- Slideshow container -->
-<div class="slideshow-container">
-
-    <!-- Full-width images with number and caption text -->
+<!-- <div class="slideshow-container">
     <div class="mySlides fade">
       <div class="numbertext">1 / 3</div>
       <img src="./img/slideDog.png" style="width:100%; height: 400px;">
@@ -31,18 +30,16 @@
       <div class="text">**para regiões Sul e Sudeste</div>
     </div>
   
-    <!-- Next and previous buttons -->
     <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
     <a class="next" onclick="plusSlides(1)">&#10095;</a>
-  </div>
-  <br>
+  </div> -->
   
   <!-- The dots/circles -->
-  <div style="text-align:center">
+  <!-- <div style="text-align:center">
     <span class="dot" onclick="currentSlide(1)"></span>
     <span class="dot" onclick="currentSlide(2)"></span>
     <span class="dot" onclick="currentSlide(3)"></span>
-  </div>
+  </div> -->
 </body>
 <script>
     var slideIndex = 0;
