--- a/PeneiraClubeProjeto/index.html
+++ b/PeneiraClubeProjeto/index.html
@@ -9,14 +9,17 @@
 </head>
 <body>
     <header>
-        <img src="./img/logo.png" id="logoHeader">
+        <div id="divLogo">
+            <img src="./img/logo300x300.png" id="logoHeader">
+            <img src="./img/name.png" id="nameHeader">
+        </div>
         <ul>
-            <!-- <li><img src="./img/Luke.png" id="logoHeader"></li> -->
-			<li><a href="principal.html"  target="principal">Home</a></li>
-			<li><a href="principal.html"  target="principal">Elenco</a></li>
-			<li><a href="promo.html" target="principal">Peneiras</a></li>
-            <li><a href="http://camolesi.atwebpages.com" target="principal">Sobre</a></li>
-			<li style="float:right;"><a href="form.html"  target="principal">Inscreva-se</a></li>
+            <!-- <li><img src="./img/logo.png" id="logoHeader"></li> -->
+			<li><a href="principal.html"  target="principal">HOME</a></li>
+			<li><a href="principal.html"  target="principal">ELENCO</a></li>
+			<li><a href="promo.html" target="principal">PENEIRAS</a></li>
+            <li><a href="http://camolesi.atwebpages.com" target="principal">SOBRE</a></li>
+			<li><a href="form.html"  target="principal">CADASTRE-SE</a></li> 
 		</ul>
     </header>
     <br>
