Adicionando imagens,ícone / Inclusão da pagina Sobre / alteração na pagina jogadres

--- a/PeneiraClubeProjeto/form.html
+++ b/PeneiraClubeProjeto/form.html
@@ -10,9 +10,7 @@
     <title>Formulário</title>
 </head>
 <body>
-    <div class="form">
-        <form>
-            <div class="form-group">
+  <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfxMaal4JFtMG5Nw_cvqj4aG4pR4dtgBE6pB9jGPiYBeYgG-Q/viewform?embedded=true" width="800" height="1500" frameborder="0" marginheight="0" marginwidth="0">Carregando…</iframe>            <div class="form-group">
                 <label for="exampleInputName1">Nome Completo:</label>
                 <input type="name" class="form-control" id="exampleInputEmail1" aria-describedby="" placeholder="João da Silva" required="required">
             </div>
@@ -39,7 +37,7 @@
                   <option>Atacante</option>
                 </select>
               </div>
-              <fieldset class="form-group">
+              <!-- <fieldset class="form-group">
                 <div class="row">
                   <legend class="col-form-label col-sm-2 pt-0">Federado:</legend>
                   <div class="col-sm-12">
@@ -61,7 +59,7 @@
               <div class="form-group">
                 <label for="exampleInputName1">Clube:</label>
                 <input type="name" class="form-control"  id="clube" aria-describedby="emailHelp" placeholder="Clube em que é federado" disabled>
-            </div>
+            </div> -->
             <div class="form-group">
               <label for="exampleInputName1">Nome do Responsável:</label>
               <input type="name" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="João da Silva">
