--- a/PeneiraClubeProjeto/principal.html
+++ b/PeneiraClubeProjeto/principal.html
@@ -9,37 +9,8 @@
     <title>Home</title>
 </head>
 <body>
-  <img src="img/fut2.jpg">
-   <!-- Slideshow container -->
-<!-- <div class="slideshow-container">
-    <div class="mySlides fade">
-      <div class="numbertext">1 / 3</div>
-      <img src="./img/slideDog.png" style="width:100%; height: 400px;">
-      <div class="text">promoção</div>
-    </div>
-  
-    <div class="mySlides fade">
-      <div class="numbertext">2 / 3</div>
-      <img src="./img/slideVacinas.png" style="width:100%; height: 400px;">
-      <div class="text">v8 v10 Raiva</div>
-    </div>
-  
-    <div class="mySlides fade">
-      <div class="numbertext">3 / 3</div>
-      <img src="./img/slideFrete.png" style="width:100%; height: 400px;">
-      <div class="text">**para regiões Sul e Sudeste</div>
-    </div>
-  
-    <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
-    <a class="next" onclick="plusSlides(1)">&#10095;</a>
-  </div> -->
-  
-  <!-- The dots/circles -->
-  <!-- <div style="text-align:center">
-    <span class="dot" onclick="currentSlide(1)"></span>
-    <span class="dot" onclick="currentSlide(2)"></span>
-    <span class="dot" onclick="currentSlide(3)"></span>
-  </div> -->
+  <img src="img/soccer.jpg">
+
 </body>
 <script>
     var slideIndex = 0;
