--- a/PeneiraClubeProjeto/index.html
+++ b/PeneiraClubeProjeto/index.html
@@ -5,38 +5,32 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <script type="text/javascript" src="js/script.js"></script>
+    <link rel="shortcut icon" type="imagex/png" href="./img/icone.png">
     <title>ADS Clube Futebol</title>
 </head>
 <body>
     <header>
         <div id="divLogo">
-            <img src="./img/logo300x300.png" id="logoHeader">
+            <img src="./img/logo200x200.png" id="logoHeader">
             <img src="./img/name.png" id="nameHeader">
         </div>
         <ul>
             <!-- <li><img src="./img/logo.png" id="logoHeader"></li> -->
 			<li><a href="principal.html"  target="principal">HOME</a></li>
-			<li><a href="principal.html"  target="principal">ELENCO</a></li>
-			<li><a href="promo.html" target="principal">PENEIRAS</a></li>
-            <li><a href="http://camolesi.atwebpages.com" target="principal">SOBRE</a></li>
+			<li><a href="jogadores.html" target="principal">JOGADORES</a></li>
+            <li><a href="sobre.html" target="principal">SOBRE</a></li>
 			<li><a href="form.html"  target="principal">CADASTRE-SE</a></li> 
 		</ul>
     </header>
     <br>
-    <!-- <nav>
-        <br> <br>
-    </nav> -->
-
-    <!-- <img src="img/fut2.jpg"> -->
-
     <section>
             <div class="texto">
                 <iframe name="principal" width="100%" height="450px" src="principal.html" frameborder="0"></iframe>       
             </div>
     </section>
     <br>
-    <!-- <footer>
+    <footer>
         Todos os direitos reservados ©
-    </footer>  -->
+    </footer> 
 </body>
 </html>
