Alterações na home

--- a/PeneiraClubeProjeto/index.html
+++ b/PeneiraClubeProjeto/index.html
@@ -5,8 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <script type="text/javascript" src="js/script.js"></script>
+    <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
+    <script src="https://use.fontawesome.com/releases/v5.15.4/js/all.js" crossorigin="anonymous"></script>
     <link rel="shortcut icon" type="imagex/png" href="./img/icone.png">
-    <title>ADS Clube Futebol</title>
+    <title>ADS Futebol Clube</title>
 </head>
 <body>
     <header>
@@ -19,7 +21,7 @@
 			<li><a href="principal.html"  target="principal">HOME</a></li>
 			<li><a href="jogadores.html" target="principal">JOGADORES</a></li>
             <li><a href="sobre.html" target="principal">SOBRE</a></li>
-			<li><a href="form.html"  target="principal">CADASTRE-SE</a></li> 
+			<li><a href="form.html"  target="principal">CADASTRE-SE</a></li>
 		</ul>
     </header>
     <br>
