--- a/PeneiraClubeProjeto/jogadores.html
+++ b/PeneiraClubeProjeto/jogadores.html
@@ -9,36 +9,105 @@
     <title>Promoções</title>
 </head>
 <body>
-    <!-- <div class="about">
-        <h1>About Us Page</h1>
-        <p>Some text about who we are and what we do.</p>
-        <p>Resize the browser window to see that this page is responsive by the way.</p>
-      </div> -->
-    <div>
-        <div class="card" style="width: 18rem;">
-            <img class="card-img-top" src="./img/jogador1.jpg" alt="jogador correndo">
-            <div class="card-body">
-                <h5 class="card-title">Richarlison Santos</h5>
-                <p class="card-text">Atacante</p>
-                <p class="card-text">Entrou no clube em 2017, 19 anos</p>
+    <section class="page-section bg-light" id="portfolio">
+        <div class="container">
+            <div class="text-center">
+                <h2 class="section-heading text-uppercase">Jogadores</h2>
+                <h3 class="section-subheading text-muted">Jogadores do clube que estão deslanchando suas carreiras!</h3>
+            </div>
+            <div class="row">
+                <div class="col-lg-4 col-sm-6 mb-4">
+                    <!-- Portfolio item 1-->
+                    <div class="portfolio-item">
+                        <a class="portfolio-link" data-bs-toggle="modal" href="#portfolioModal1">
+                            <div class="portfolio-hover">
+                                <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
+                            </div>
+                            <img class="img-fluid" src="img/jogador1.jpg" alt="..." />
+                        </a>
+                        <div class="portfolio-caption">
+                            <div class="portfolio-caption-heading">Larissa Souza</div>
+                            <div class="portfolio-caption-subheading text-muted">Entrou no clube em 2019</div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-sm-6 mb-4">
+                    <!-- Portfolio item 2-->
+                    <div class="portfolio-item">
+                        <a class="portfolio-link" data-bs-toggle="modal" href="#portfolioModal2">
+                            <div class="portfolio-hover">
+                                <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
+                            </div>
+                            <img class="img-fluid" src="img/jogador2.jpg" alt="..." />
+                        </a>
+                        <div class="portfolio-caption">
+                            <div class="portfolio-caption-heading">Luís Pardim</div>
+                            <div class="portfolio-caption-subheading text-muted">Entrou no clube em 2020</div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-sm-6 mb-4">
+                    <!-- Portfolio item 3-->
+                    <div class="portfolio-item">
+                        <a class="portfolio-link" data-bs-toggle="modal" href="#portfolioModal3">
+                            <div class="portfolio-hover">
+                                <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
+                            </div>
+                            <img class="img-fluid" src="img/jogador3.jpg" alt="..." />
+                        </a>
+                        <div class="portfolio-caption">
+                            <div class="portfolio-caption-heading">João Gomes</div>
+                            <div class="portfolio-caption-subheading text-muted">Entrou no clube em 2020</div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-sm-6 mb-4 mb-lg-0">
+                    <!-- Portfolio item 4-->
+                    <div class="portfolio-item">
+                        <a class="portfolio-link" data-bs-toggle="modal" href="#portfolioModal4">
+                            <div class="portfolio-hover">
+                                <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
+                            </div>
+                            <img class="img-fluid" src="img/jogador4.jpg" alt="..." />
+                        </a>
+                        <div class="portfolio-caption">
+                            <div class="portfolio-caption-heading">Nicolas Oliveira</div>
+                            <div class="portfolio-caption-subheading text-muted">Entrou no clube em 2019</div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-sm-6 mb-4 mb-sm-0">
+                    <!-- Portfolio item 5-->
+                    <div class="portfolio-item">
+                        <a class="portfolio-link" data-bs-toggle="modal" href="#portfolioModal5">
+                            <div class="portfolio-hover">
+                                <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
+                            </div>
+                            <img class="img-fluid" src="img/jogador5.jpg" alt="..." />
+                        </a>
+                        <div class="portfolio-caption">
+                            <div class="portfolio-caption-heading">Julia Ribeiro</div>
+                            <div class="portfolio-caption-subheading text-muted">Entrou no clube em 2018</div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-sm-6">
+                    <!-- Portfolio item 6-->
+                    <div class="portfolio-item">
+                        <a class="portfolio-link" data-bs-toggle="modal" href="#portfolioModal6">
+                            <div class="portfolio-hover">
+                                <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
+                            </div>
+                            <img class="img-fluid" src="img/jogador6.jpg" alt="..." />
+                        </a>
+                        <div class="portfolio-caption">
+                            <div class="portfolio-caption-heading">Miguel Almeida</div>
+                            <div class="portfolio-caption-subheading text-muted">Entrou no clube em 2017</div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
-        <div class="card" style="width: 18rem;">
-            <img class="card-img-top" src="./img/jogador2.jpg" alt="Card image cap">
-            <div class="card-body">
-                <h5 class="card-title">João Gomes</h5>
-                <p class="card-text">Meia Lateral</p>
-                <p class="card-text">Entrou no clube em 2020, 14 anos</p>
-            </div>
-        </div>
-        <div class="card" style="width: 18rem;">
-            <img class="card-img-top" src="./img/jogador3.jpg" alt="Card image cap">
-            <div class="card-body">
-                <h5 class="card-title">Thiago Duarte</h5>
-                <p class="card-text">Goleiro</p>
-                <p class="card-text">Entrou no clube em 2019</p>
-            </div>
-        </div>
-    </div>
+    </section>
 </body>
 </html>
