--- a/PeneiraClubeProjeto/sobre.html
+++ b/PeneiraClubeProjeto/sobre.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div class="about">
-        <h1>About Us Page</h1>
+        <h1>Sobre nós</h1>
         <p>Some text about who we are and what we do.</p>
         <p>Resize the browser window to see that this page is responsive by the way.</p>
       </div>
