Alteração na pagina index/ menu fixo

--- a/PeneiraClubeProjeto/principal.html
+++ b/PeneiraClubeProjeto/principal.html
@@ -31,14 +31,14 @@
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
                         <i class="fas fa-circle fa-stack-2x text-primary"></i>
-                        <i class="fas fa-laptop fa-stack-1x fa-inverse"></i>
+                        <i class="fas fa-star fa-stack-1x fa-inverse"></i>
                     </span>
-                    <h4 class="my-3">Responsive Design</h4>
+                    <h4 class="my-3">Títulos</h4>
                     <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
                 </div>
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
-                        <i class="fas fa-circle fa-stack-2x text-primary"></i>
+                        <i class="fas fa-circle fa-stack-2x text-primary circulo"></i>
                         <i class="fas fa-lock fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="my-3">Web Security</h4>
@@ -53,7 +53,10 @@
         <h1>Sobre nós</h1>
         <p>Some text about who we are and what we do.</p>
         <p>Resize the browser window to see that this page is responsive by the way.</p>
-      </div>
+        <div class="container">
+            <a class="btn btn-primary btn-xl text-uppercase" href="form.html">Entre no nosso clube!!!</a>
+        </div>
+    </div>
       <br/><br/>
       <br/>
     
@@ -100,7 +103,7 @@
                     <div class="portfolio-item">
                         <a class="portfolio-link" data-bs-toggle="modal" href="#portfolioModal3">
                             <div class="portfolio-hover">
-                                <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
+                                <div class="portfolio-hover-content"><p>Algo sobre o jogador</p></div>
                             </div>
                             <img class="img-fluid" src="img/jogador3.jpg" alt="..." />
                         </a>
