--- a/PeneiraClubeProjeto/index.html
+++ b/PeneiraClubeProjeto/index.html
@@ -54,7 +54,7 @@
                             </span> -->
                             <img src="img/estrela.png" alt="" srcset="">
                             <h4 class="my-3">Estrelas da temporada</h4>
-                            <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+                            <p class="text-muted"> Luís Pardim Artilheiro isolado com 15 gols na categoria sub 12</p>
                         </div>
                         <div class="col-md-4">
                             <!-- <span class="fa-stack fa-4x">
