--- a/PeneiraClubeProjeto/index.html
+++ b/PeneiraClubeProjeto/index.html
@@ -35,7 +35,7 @@
                 <div class="container">
                     <div class="text-center">
                         <h2 class="section-heading text-uppercase">Services</h2>
-                        <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+                        <h3 class="section-subheading text-muted">A melhor Escolinha para o seu chute inicial</h3>
                     </div>
                     <div class="row text-center">
                         <div class="col-md-4">
@@ -45,7 +45,7 @@
                             </span> -->
                             <img src="img/falta.png" alt="" srcset="">
                             <h4 class="my-3">Faltas</h4>
-                            <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+                            <p class="text-muted">Larissa Souza nossa xerife na zaga, conta com 10 jogos sem sofrer gols e 7 cartões amarelos em 25 partidas</p>
                         </div>
                         <div class="col-md-4">
                             <!-- <span class="fa-stack fa-4x">
@@ -63,7 +63,7 @@
                             </span> -->
                             <img src="img/trofeu.png" alt="" srcset="">
                             <h4 class="my-3">Titulos</h4>
-                            <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+                            <p class="text-muted">Brasileirão sub 15 e Copa do Brasil sub 15 </p>
                         </div>
                     </div>
                 </div>
@@ -72,8 +72,9 @@
             <!-- Sobre -->
             <div class="about" id="sobre">
                 <h1>Sobre nós</h1>
-                <p>Some text about who we are and what we do.</p>
-                <p>Resize the browser window to see that this page is responsive by the way.</p>
+                <p>ADS Futebol clube</p>
+                <p>Revelamos muitos dos maiores craques do Brasil, entre ele Romaldinho Carioca e Adreino Soberona. 
+                    Mas tudo ao seu tempo. Procuramos a princípio, desenvolver um trabalho gradativo, respeitando a faixa etária e a aptidão dos alunos.</p>
                 <div class="container">
                     <a class="btn btn-dark btn-xl text-uppercase" href="form.html">Entre no nosso clube!!!</a>
                 </div>
