--- a/PeneiraClubeProjeto/index.html
+++ b/PeneiraClubeProjeto/index.html
@@ -34,8 +34,8 @@
             <section class="page-section" id="services">
                 <div class="container">
                     <div class="text-center">
-                        <h2 class="section-heading text-uppercase">Services</h2>
-                        <h3 class="section-subheading text-muted">A melhor Escolinha para o seu chute inicial</h3>
+                        <!-- <h2 class="section-heading text-uppercase">Services</h2> -->
+                        <h3 class="section-subheading text-muted">O melhor clube para o seu chute inicial</h3>
                     </div>
                     <div class="row text-center">
                         <div class="col-md-4">
